# bevy-fps-counter

./: Cargo.toml  README.md
.github/workflows/: check-bevy-release.yml
examples/: Cargo.toml  basic.rs
src/: lib.rs
