[package]
authors = ["Adam Cvikl <adam.wasd4@gmail.com>"]
name = "bevy-fps-counter"
description = "A simple FPS counter plugin for Bevy."
repository = "https://github.com/Adamekka/bevy-fps-counter"
homepage = "https://github.com/Adamekka/bevy-fps-counter"
license = "MIT"
version = "0.10.0"
edition = "2024"
readme = "README.md"

[dependencies]
bevy = "0.19"


[[example]]
name = "basic"
path = "examples/basic.rs"
